# hermes

./: .gitignore  LICENSE  README.md  main.py
docs/: LAB_BRINGUP_CHECKLIST.md  MACHINE_COMMANDS.md
espnow_testbed/: README.md
gestures/: fsr_tracker.py  imu_filter.py  matcher.py  models.py  posture_classifier.py  recognizer.py  registry.py  safety.py
ros_version/: README.md
ros_version/src/hermes_control/: package.xml  setup.cfg  setup.py
ros_version/src/hermes_control/config/: haptic_vest_pi.yaml  optitrack_r1.yaml  optitrack_r2.yaml  optitrack_r3.yaml  optitrack_r4.yaml  optitrack_r5.yaml  optitrack_r6.yaml  optitrack_version1_placeholders.yaml  optitrack_version2_single_robot_placeholder.yaml  robot_haptic_status_defaults.yaml  robot_haptic_status_r1.yaml  robot_haptic_status_r2.yaml  robot_haptic_status_r3.yaml  robot_haptic_status_r4.yaml  robot_haptic_status_r5.yaml  robot_haptic_status_r6.yaml  vest_serial_bridge_pi.yaml
ros_version/src/hermes_control/hermes_control/: decentralized_robot_agent_node.py  gesture_pipeline_node.py  haptic_vest_node.py  keyboard_teleop_node.py  legacy_main.py  local_robot_io_node.py  optitrack_pose_beacon_node.py  robot_haptic_status_node.py  robot_state_beacon_node.py  swarm_control_node.py  vest_serial_bridge_node.py
ros_version/src/hermes_control/hermes_control/gestures/: fsr_tracker.py  matcher.py  models.py  posture_classifier.py  recognizer.py  registry.py  safety.py
ros_version/src/hermes_control/hermes_control/swarm/: behavior_engine.py  swarm_controller.py
ros_version/src/hermes_control/launch/: haptic_vest.launch.py  hermes_decentralized.launch.py  hermes_keyboard_teleop.launch.py  hermes_ros.launch.py  optitrack_version1_pi.launch.py  robot_agent.launch.py  robot_agent_optitrack_version1.launch.py  robot_agent_optitrack_version2.launch.py  robot_haptic_status.launch.py  wearables_pi.launch.py
(+15 files in other folders)
