<?xml version="1.0"?>
<package format="3">
  <name>hermes_control</name>
  <version>0.1.0</version>
  <description>ROS2 packaging of the H.E.R.M.E.S gesture and swarm control software.</description>
  <maintainer email="saleh@example.com">salehabdelrahman</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
